[package]
name = "frostgate-relayer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
frostgate-sdk = { path = "../frostgate-sdk" }
frostgate-prover = { path = "../frostgate-prover" }
frostgate-verifier = { path = "../frostgate-verifier" }
ethers.workspace = true
solana-client = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
async-trait.workspace = true
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.7"
log = "0.4.27"
thiserror.workspace = true
tracing = "0.1.41"
bincode.workspace = true
reqwest = "0.11"
subxt = "0.42.1"

[features]
examples = []
