[package]
name = "frostgate-relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
frostgate-sdk = { path = "../frostgate-sdk" }
frostgate-icap = { path = "../frostgate-icap" }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
